# pyT2GA

./: README.md  T2GA.py  T2GAlib.py  T2GAscript.py  pyproject.toml  pystringbio_client_test.ipynb  pyt2ga_client.ipynb  setup.py
Data/: incomplete-wt1.tsv
Data/databases/: GOc_pws.json  GOf_pws.json  STRING_v110.tsv
Databases/: GO_pws.json  GOp_pws.json  STRING_to_Uniprot.tsv
pyt2ga/: __main__.py  io.py  test_GL.py
src/: T2GA-analysis.json
src/pyT2GA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyt2ga/: __init__.py  core.py  io.py
